Fix responsive issues on mobile

--- a/frontHorrorFootageFinder/src/components/App/App.scss
+++ b/frontHorrorFootageFinder/src/components/App/App.scss
@@ -25,7 +25,7 @@
   display: flex;
   text-transform: uppercase;
   min-height: 100vh;
-  max-height: 100vh;
+  // max-height: 100vh;
   padding-bottom: 1rem;
   flex-direction: column;
   justify-content: space-between;
